--- a/src/pages/Session.scss
+++ b/src/pages/Session.scss
@@ -2,21 +2,4 @@ main.session {
   section {
     position: relative;
   }
-
-  .mouse-event {
-    transition: width 0.5s, height 0.5s;
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-    visibility: hidden;
-  }
-
-  .mouse-event.visible {
-    visibility: visible;
-  }
-
-  .mouse-event.click {
-    width: 30px;
-    height: 30px;
-  }
 }
